# quickwit

./: Cargo.toml  Makefile  README.md  rustfmt.toml
.github/workflows/: ci.yml  coverage.yml  publish_cross_images.yml  release.yml
docs/internals/: split-format.md
quickwit-actors/src/: actor.rs  channel_with_priority.rs  mailbox.rs
quickwit-backward-compat/: README.md  build.rs
quickwit-backward-compat/tests/: split_metadata_non_regression.rs  test_backward_compatibility.rs
quickwit-cli/: Cargo.toml
quickwit-cli/src/: cli.yaml  index.rs  lib.rs  main.rs  service.rs  service_foo.rs  source.rs
quickwit-cli/tests/: cli.rs
quickwit-cluster/src/: error.rs
quickwit-common/src/: lib.rs
quickwit-config/: Cargo.toml
quickwit-config/src/: index_config.rs  lib.rs  server_config.rs  source_config.rs
quickwit-core/src/: index.rs  lib.rs  test_utils.rs
quickwit-directories/src/: bundle_directory.rs  lib.rs
quickwit-indexing/: Cargo.toml
quickwit-indexing/failpoints/: mod.rs
quickwit-indexing/src/: lib.rs  merge_policy.rs  test_utils.rs
quickwit-metastore/: Cargo.toml
quickwit-metastore/src/: checkpoint.rs  lib.rs  tests.rs
quickwit-proto/: Cargo.toml  SERVICE.rs.tmpl  build.rs
quickwit-pushapi/: Cargo.toml
quickwit-pushapi/src/: blocking_service.rs  errors.rs  lib.rs  position.rs  queue.rs  service.rs
quickwit-serve/: Cargo.toml
quickwit-storage/: Cargo.toml
quickwit-ui/: .eslintrc  package.json
quickwit-wal/: Cargo.toml
quickwit-wal/src/: lib.rs  main.rs  reader.rs  segment_reader.rs  segment_writer.rs  writer.rs
(+70 files in other folders)
