[workspace]

members = [
  "quickwit-actors",
  "quickwit-common",
  "quickwit-cli",
  "quickwit-cluster",
  "quickwit-config",
  "quickwit-core",
  "quickwit-directories",
  "quickwit-doc-mapper",
  "quickwit-indexing",
  "quickwit-metastore",
  "quickwit-proto",
  "quickwit-search",
  "quickwit-serve",
  "quickwit-storage",
  "quickwit-swim",
  "quickwit-telemetry",
  "quickwit-wal",
]
