[package]
name = "quickwit-pushapi"
version = "0.2.1"
edition = "2021"

[dependencies]
tokio = {version="1", features=["full"]}
async-trait = "0.1"
rocksdb = "0.18"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
quickwit-proto = {path="../quickwit-proto", version ="0.2.1"}
flume = "0.10"
once_cell = "1"
serde = { version = "1.0", features = ["derive", "rc"] }

[dev-dependencies]
tempfile = "3"
rand = "0.8"
rand_distr = "0.4"
