[package]
name = "quickwit-wal"
version = "0.2.0"
authors = ["Quickwit, Inc. <hello@quickwit.io>"]
edition = "2021"
license = "AGPL-3.0-or-later" # For a commercial license, contact hello@quickwit.io
description = "Quickwit configuration"
repository = "https://github.com/quickwit-inc/quickwit"
homepage = "https://quickwit.io"
documentation = "https://quickwit.io/docs"

[dependencies]
anyhow = "1.0.52"
crc32fast = "1.3.0"
tokio = { version = "1.15.0", features = ["full"] }

[dev-dependencies]
tempfile = "3.2.0"
